fixed responsiveness on mobile phones

--- a/pdfwebsite/static/pdfwebsite/main.css
+++ b/pdfwebsite/static/pdfwebsite/main.css
@@ -98,8 +98,8 @@ a.article-title:hover {
 
 .file-upload {
   background-color: #ffffff;
-  width: 600px;
-  margin: 0 auto;
+  max-width: 600px;
+  margin: auto;
   padding: 20px;
 }
 
